Fix spacing problems

--- a/style/small_screen.css
+++ b/style/small_screen.css
@@ -6,6 +6,7 @@
     .description {
         width: 100%;
         margin-left: 0;
+        margin-bottom: 2.5vh;
     }
     .picture.horizontal {
         width: min(97.5%);
